--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_deploy:
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
 deploy:
+  - region: eu-central-1
   - provider: codedeploy
       access_key_id: AKIAJNFAUHYHJLIATM4A
       secret_access_key:
