--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_deploy:
 - zip -r battle.net.zip .
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
-after_deploy:
-- nodemon bin/www
+after_install:
+- sudo nodemon bin/www
 deploy:
 - provider: s3
   region: eu-central-1
