--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
 after_install:
-- nodemon bin/www
+- sudo nodemon bin/www
 deploy:
 - provider: s3
   region: eu-central-1
