--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_deploy:
 - zip -r battle.net.zip .
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
-after_install:
+after_deploy:
 - sudo node bin/www
 deploy:
 - provider: s3
