--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 - npm install
 - npm install -g nodemon
 script:
-- sudo nodemon bin/www
+- npm start
 before_deploy:
 - zip -r battle.net.zip .
 - mkdir -p dpl_cd_upload
