--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_deploy:
 - zip -r battle.net.zip .
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
+after_deploy:
 - npm start
 deploy:
 - provider: s3
