--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_deploy:
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
 after_deploy:
-- npm start
+- sudo $(type -P npm) start
 deploy:
 - provider: s3
   region: eu-central-1
