--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_deploy:
 - mkdir -p dpl_cd_upload
 - mv battle.net.zip dpl_cd_upload/battle.net.zip
 after_deploy:
-- sudo $(type -P pm2) start bin/www
+- sudo nodejs bin/www
 deploy:
 - provider: s3
   region: eu-central-1
