--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,16 @@ os: linux
 files:
   - source: ./
     destination: /home/ubuntu/battle.net
+permissions:
+  - object: /home/ubuntu/battle.net
+    pattern: "start_server.sh"
+    owner: root
+    group: root
+    mode: 751
+    type:
+      - file
+hooks:
+  ApplicationStart:
+    - location: start_server.sh
+      timeout: 500
+      runas: root
